--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sohag Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <section class="top-banner"> 
+     <div class="half-width">  
+      <h1>Welcome To</h1> 
+      <h1><span class="orange-color">Sohag Bagchi's</span> Website!</h1>
+      <h3>If You Work Hard You Will Be Success</h3>
+      <p>My name is Sohag bagchi.Know i am learing about web design and devlopment.I know some fundamental thing about web design.I will working hard to know everything about web design.Know i can understand some html,css and github.
+      Everybody pray for me those i will be made a professinol web designer.
+      </p>
+      <a class="link-button" target="_blank" href="https://github.com/sohagbagchi">HIRE ME</a>
+    </div>
+    <div class="half-width">  
+      <img src="images/sohagpic.png" alt="Sohag">
+    </div>
+  </section>
 </body>
 </html>
