--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <div class="half-width">  
       <img src="images/sohagpic.png" alt="Sohag">
     </div>
+  </section><br><br>
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="sohag.jpg" alt="Sohag">
+    </div>
+    <div class="half-width">
+      <h1>Dream Big</h1>
+      <h4>Become a Web Developer</h4>
+      <p>I will working hard to know everything about web design.Know i can understand some html,css and github. Everybody pray for me those i will be made a professinol web designer.</p>
+      <a class="link-button" target="_blank" href="https://github.com/sohagbagchi">DOWNLOAD RESUME</a>
+    </div>
   </section>
 </body>
 </html>
