styled border and add footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="top-banner"> 
+  <section class="top-banner flexible-container"> 
      <div class="half-width">  
       <h1>Welcome To</h1> 
       <h1><span class="orange-color">Sohag Bagchi's</span> Website!</h1>
@@ -24,8 +24,8 @@
     <div class="half-width">  
       <img src="images/sohagpic.png" alt="Sohag">
     </div>
-  </section><br><br>
-  <section class="dream-big">
+  </section>
+  <section class="dream-big flexible-container">
     <div class="half-width">
       <img src="sohag.jpg" alt="Sohag">
     </div>
@@ -36,5 +36,23 @@
       <a class="link-button" target="_blank" href="https://github.com/sohagbagchi">DOWNLOAD RESUME</a>
     </div>
   </section>
+  <section class="experience-area">
+    <h1>Experiences</h1>
+    <div class="flexible-container">   
+       <div id="full-stuck" class="experience-item">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-color">2022-Present Pro Lavel Developer</h3>
+        <p>I am not a full stack web Developer.recently i am learing about web developig.i am know some fundamental things about ewb developing.i will more and to take easily knowing about web developing.</p>
+      </div>
+      <div id="baby-web" class="experience-item">
+       <h2>Baby Web Developer</h2>
+        <h3 class="orange-color">2022-Today Hero Lavel Developer</h3>
+        <p>I am not a full stack web Developer.recently i am learing about web developig.i am know some fundamental things about ewb developing.i will more and to take easily knowing about web developing.</p>
+      </div>
+    </div>
+  </section>
 </body>
+  <footer>
+      <p>Thanks for visiting my website</p>
+  </footer>
 </html>
